force-app/main/default/objects/Krow__Project_Assignment_Utilization__c/Krow__Project_Assignment_Utilization__c.object-meta.xml
<CustomObject>
    <label>Project Assignment Utilization</label>
    <nameField>
        <displayFormat>PAU-{00000}</displayFormat>
        <label>Project Assignment Utilization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Assignment Utilizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>