force-app/main/default/objects/Krow__Project_Assignment_Utilization__c/fields/Krow__Planned_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Utilization__c</fullName>
    <formula>IF( 
OR( 
ISBLANK( Krow__Monthly_Work_Week_Hours__c ), 
IF( 
Krow__Monthly_Work_Week_Hours__c = 0, TRUE, FALSE 
) 
), 0, 
( 
(Krow__Planned_Hours__c + IF( Krow__Project_Resource__r.Krow__Placeholder__c = TRUE,Krow__Monthly_Work_Week_Hours__c,0)) 
/ (Krow__Monthly_Work_Week_Hours__c * Krow__Target_Utilization__c)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Utilization %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>