force-app/main/default/objects/Krow__Project_Assignment_Utilization__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Project Assignment Utilizations</relationshipLabel>
    <relationshipName>Project_Assignment_Utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>