force-app/main/default/objects/Krow__Project_Assignment_Utilization__c/fields/Krow__Target_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Target_Utilization__c</fullName>
    <label>Target Utilization %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>